Se organiza el gradle para que corra los test